# android-databinding

BasicSample/: .bazelrc  BUILD.bazel  README.md  WORKSPACE
