
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")

kt_android_library(
    name = "lib_prod",
    srcs = glob(["app/src/main/java/**"]),
    manifest = "app/src/main/AndroidManifest.xml",
    custom_package = "com.example.android.databinding.basicsample",
    # enable_data_binding = 1,
    resource_files = glob(["app/src/main/res/**"]),
    assets = glob(["app/src/main/assets/**"]),
    assets_dir = "app/src/main/assets/",
    deps = [
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib_jdk7",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_lifecycle_lifecycle_extensions",
        "@maven//:androidx_databinding_databinding_common",
        "@maven//:androidx_databinding_databinding_runtime",
        "@maven//:androidx_databinding_databinding_adapters",
        ":androidx_databinding_databinding_compiler_library",
    ],
    plugins = [
        ":androidx_databinding_databinding_compiler_plugin",
    ],
)
android_binary(
    name = "app_prod",
    manifest = "app/src/main/AndroidManifest.xml",
    manifest_values = {
        "minSdkVersion": "14",
    },
    custom_package = "com.example.android.databinding.basicsample",
    deps = [":lib_prod"],
    multidex = "native",
)


java_plugin(
    name = "androidx_databinding_databinding_compiler_plugin",
    processor_class = "androidx.databinding.annotationprocessor.ProcessDataBinding",
    deps = ["@maven//:androidx_databinding_databinding_compiler"],
    generates_api = 1,
    visibility = ["//visibility:public"],
)

java_library(
    name = "androidx_databinding_databinding_compiler_library",
    exports = [
        "@maven//:androidx_databinding_databinding_compiler",
    ],
    exported_plugins = [
        ":androidx_databinding_databinding_compiler_plugin",
    ],
)

